--- a/OLID_SOLUTION/WEBAPP/OLIDSOLUTON.csproj
+++ b/OLID_SOLUTION/WEBAPP/OLIDSOLUTON.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,6 +18,10 @@
     <Content Include="Pages\Index.razor.css" />
     <Content Include="Pages\List.razor.css" />
     <Content Include="Pages\Music.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\webLibrary1\webLibrary1.csproj" />
   </ItemGroup>
 
 </Project>
